# swagger.yaml
@@ -27,7 +27,7 @@ tags:
     description: User Endpoints (admin only)
 
 paths:
-  "/auth/signup":
+  "/auth/register":
     post:
       description: create a new account
       tags: [Auth]
@@ -84,7 +84,7 @@ paths:
         "500":
           $ref: "#/components/responses/500"
 
-  "/auth/signin":
+  "/auth/login":
     post:
       description: Login to Your account
       tags: [Auth]
